--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "webpack server --open --config webpack.dev.js",
-        "build": "webpack --config webpack.prod.js"
+        "build": "webpack --config webpack.prod.js",
+        "deploy": "git subtree push --prefix dist origin gh-pages"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "css-loader": "^6.10.0",
+        "html-webpack-plugin": "^5.6.0",
         "style-loader": "^3.3.4",
         "webpack": "^5.90.3",
         "webpack-cli": "^5.1.4",
